# LandmarkMapper

./: .replit  LICENSE.md  README.md  generate_requirements.py  main.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
