[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
virtualenv = "^20.0.0"
markupsafe = "^2.1.5"
flask = "^3.0.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
